Implement role-based access model and updated visibility rules - first part (#1)
* feat: add Role enum and role field to User entity

* feat: link User and Content entities, and update services and controllers

* fix: address warnings

* feat: remove tests, to redo later